fix-shadCN UI styles issue in your Nx monorepo with Tailwind v4 and Next.js 15

--- a/apps/v4/tsconfig.json
+++ b/apps/v4/tsconfig.json
@@ -21,6 +21,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
+      "@workspace/ui": ["../../packages/ui/src"],
       "react": ["./node_modules/@types/react"]
     }
   },
