--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "release": "changeset version",
     "pub:beta": "cd packages/shadcn && pnpm pub:beta",
     "pub:release": "cd packages/shadcn && pnpm pub:release",
-    "test": "turbo run test --filter=!shadcn-ui --force",
-    "tests:test": "pnpm --filter=tests test"
+    "test:dev": "turbo run test --filter=!shadcn-ui --force",
+    "test": "start-server-and-test v4:dev http://localhost:4000 test:dev"
   },
   "packageManager": "pnpm@9.0.6",
   "dependencies": {
@@ -86,6 +86,7 @@
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
+    "start-server-and-test": "^2.0.12",
     "typescript": "^5.5.3"
   }
 }
