feat(shadcn): properly resolve namespaced registryDependencies

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:registry": "pnpm --filter=www,v4 build:registry && pnpm --filter=www,v4 lint:fix && pnpm format:write -- --loglevel silent",
     "registry:build": "pnpm --filter=v4 registry:build && pnpm lint:fix && pnpm format:write -- --loglevel silent",
     "registry:capture": "pnpm --filter=www registry:capture",
-    "dev": "turbo run dev --parallel",
+    "dev": "turbo run dev --filter=!www --parallel",
     "shadcn-ui:dev": "turbo --filter=shadcn-ui dev",
     "shadcn-ui": "pnpm --filter=shadcn-ui start:dev",
     "shadcn-ui:test": "pnpm --filter=shadcn-ui test",
