--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -70,12 +70,12 @@
     "date-fns": "^2.30.0",
     "embla-carousel-autoplay": "8.0.0-rc15",
     "embla-carousel-react": "8.0.0-rc15",
+    "es-toolkit": "^1.39.8",
     "framer-motion": "^11.0.24",
     "geist": "^1.2.2",
     "input-otp": "^1.2.2",
     "jotai": "^2.1.0",
     "little-date": "^1.0.0",
-    "lodash": "^4.17.21",
     "lucide-react": "0.477.0",
     "markdown-wasm": "^1.2.0",
     "next": "14.3.0-canary.43",
@@ -99,7 +99,6 @@
   },
   "devDependencies": {
     "@shikijs/compat": "^1.1.7",
-    "@types/lodash": "^4.17.7",
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.65",
     "@types/react-color": "^3.0.6",
