--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -63,6 +63,7 @@
     "@babel/core": "^7.22.1",
     "@babel/parser": "^7.22.6",
     "@babel/plugin-transform-typescript": "^7.22.5",
+    "@dotenvx/dotenvx": "^1.48.4",
     "@modelcontextprotocol/sdk": "^1.10.2",
     "commander": "^10.0.0",
     "cosmiconfig": "^8.1.3",
