--- a/apps/v4/components.json
+++ b/apps/v4/components.json
@@ -3,6 +3,7 @@
   "style": "new-york",
   "rsc": true,
   "tsx": true,
+  "unifiedRadixImports": false,
   "tailwind": {
     "config": "",
     "css": "app/globals.css",
