--- a/templates/monorepo-next/apps/web/components.json
+++ b/templates/monorepo-next/apps/web/components.json
@@ -3,6 +3,7 @@
   "style": "new-york",
   "rsc": true,
   "tsx": true,
+  "unifiedRadixImports": false,
   "tailwind": {
     "config": "",
     "css": "../../packages/ui/src/styles/globals.css",
