--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -76,6 +76,7 @@
     "execa": "^7.0.0",
     "fast-glob": "^3.3.2",
     "fs-extra": "^11.1.0",
+    "fuzzysort": "^3.1.0",
     "https-proxy-agent": "^6.2.0",
     "kleur": "^4.1.5",
     "msw": "^2.7.1",
