--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "pub:beta": "cd packages/shadcn && pnpm pub:beta",
     "pub:release": "cd packages/shadcn && pnpm pub:release",
     "test:dev": "turbo run test --filter=!shadcn-ui --force",
-    "test": "start-server-and-test v4:dev http://localhost:4000 test:dev"
+    "test": "start-server-and-test v4:dev http://localhost:4000 test:dev",
+    "validate:registries": "pnpm --filter=v4 validate:registries"
   },
   "packageManager": "pnpm@9.0.6",
   "dependencies": {
