fix: resolve Tailwind CSS class ordering violations and missing key props
- Fixed Tailwind CSS class ordering violations across multiple components
- Added missing 'key' props in iterators
- Ran ESLint auto-fix to ensure compliance with project standards

--- a/package.json
+++ b/package.json
@@ -83,11 +83,17 @@
     "vitest": "^2.1.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/hast": "^3.0.4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
+    "jest": "^30.1.3",
     "start-server-and-test": "^2.0.12",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.5.3"
   }
 }
