--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -90,6 +90,7 @@
     "prompts": "^2.4.2",
     "recast": "^0.23.11",
     "stringify-object": "^5.0.0",
+    "tar": "^7.4.3",
     "ts-morph": "^26.0.0",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1",
