--- a/.github/workflows/deprecated.yml
+++ b/.github/workflows/deprecated.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout PR
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - name: Get changed files
