--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -68,8 +68,8 @@
     "cmdk": "^1.0.0",
     "contentlayer2": "^0.4.6",
     "date-fns": "^2.30.0",
-    "embla-carousel-autoplay": "8.0.0-rc15",
-    "embla-carousel-react": "8.0.0-rc15",
+    "embla-carousel-autoplay": "8.5.2",
+    "embla-carousel-react": "8.5.2",
     "framer-motion": "^11.0.24",
     "geist": "^1.2.2",
     "input-otp": "^1.2.2",
