--- a/.github/ISSUE_TEMPLATE/registry_directory.yml
+++ b/.github/ISSUE_TEMPLATE/registry_directory.yml
@@ -56,10 +56,8 @@ body:
       description: Verify that your registry meets the following requirements:
       options:
         - label: The registry must be open source and publicly accessible.
-          required: true
         - label: The registry must be a valid JSON file that conforms to the [registry schema](https://ui.shadcn.com/docs/registry/registry-json) specification.
-          required: true
         - label: The `files` array, if present on your registry items, must NOT include a `content` property.
-          required: true
         - label: I've attached a square SVG logo to this issue
-          required: true
+    validations:
+      required: true
