--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev --turbopack --port 4000",
     "build": "pnpm --filter=shadcn build && next build",
     "start": "next start --port 4000",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "typecheck": "tsc --noEmit",
     "format:write": "prettier --write \"**/*.{ts,tsx,mdx}\" --cache",
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache",
@@ -67,22 +67,22 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "8.5.2",
     "embla-carousel-react": "8.5.2",
-    "fumadocs-core": "15.3.1",
+    "fumadocs-core": "16.0.5",
     "fumadocs-docgen": "2.0.0",
-    "fumadocs-mdx": "11.6.3",
-    "fumadocs-ui": "15.3.1",
+    "fumadocs-mdx": "13.0.2",
+    "fumadocs-ui": "16.0.5",
     "input-otp": "^1.4.2",
     "jotai": "^2.1.0",
     "little-date": "^1.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "0.474.0",
     "motion": "^12.12.1",
-    "next": "15.3.1",
+    "next": "16.0.0",
     "next-themes": "0.4.6",
     "postcss": "^8.5.1",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^2.1.7",
     "react-textarea-autosize": "^8.5.9",
@@ -98,17 +98,16 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.1",
     "@tailwindcss/postcss": "^4",
     "@types/lodash": "^4.17.7",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20",
-    "@types/react": "19.1.2",
-    "@types/react-dom": "19.1.2",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "@typescript-eslint/parser": "^8.31.0",
     "eslint": "^9",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "16.0.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.11",
