--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
   "devDependencies": {
     "@types/hast": "^3.0.4",
     "@types/node": "^20.11.27",
-    "@types/react": "^18.2.65",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "start-server-and-test": "^2.0.12",
     "typescript": "^5.5.3"
   },
