--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "turbo run lint",
     "lint:fix": "turbo run lint:fix",
     "preview": "turbo run preview",
-    "typecheck": "turbo run typecheck --filter=!www",
+    "typecheck": "turbo run typecheck",
     "format:write": "turbo run format:write",
     "format:check": "turbo run format:check",
     "sync:templates": "./scripts/sync-templates.sh \"templates/*\"",
@@ -62,6 +62,7 @@
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "puppeteer": "^23.6.0",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.1.4",
     "turbo": "^1.9.9",
     "vite": "^7.1.12",
