--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -54,6 +54,7 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.7",
+    "@solar-icons/react-perf": "^1.0.0",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/react-form": "^1.20.0",
@@ -87,6 +88,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.62.0",
+    "react-infinite-viewer": "^0.28.1",
     "react-resizable-panels": "^2.1.7",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "2.15.1",
