--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -80,6 +80,7 @@
     "motion": "^12.12.1",
     "next": "16.0.0",
     "next-themes": "0.4.6",
+    "nuqs": "^2.7.2",
     "postcss": "^8.5.1",
     "react": "19.2.0",
     "react-day-picker": "^9.7.0",
