--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -97,6 +97,7 @@
     "shadcn": "3.5.0",
     "shiki": "^1.10.1",
     "sonner": "^2.0.0",
+    "swr": "^2.3.6",
     "tailwind-merge": "^3.0.1",
     "ts-morph": "18.0.0",
     "vaul": "1.1.2",
