feat: implement icons

--- a/packages/shadcn/package.json
+++ b/packages/shadcn/package.json
@@ -42,6 +42,10 @@
     "./mcp": {
       "types": "./dist/mcp/index.d.ts",
       "default": "./dist/mcp/index.js"
+    },
+    "./icons": {
+      "types": "./dist/icons/index.d.ts",
+      "default": "./dist/icons/index.js"
     }
   },
   "bin": "./dist/index.js",
