--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -90,6 +90,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.62.0",
+    "react-infinite-viewer": "^0.28.1",
     "react-resizable-panels": "^2.1.7",
     "react-textarea-autosize": "^8.5.9",
     "recharts": "2.15.1",
